--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -3,6 +3,7 @@
 # and obtained from the dandiarchive.
 '@context': 
   https://raw.githubusercontent.com/dandi/schema/master/releases/0.6.9/context.json
+about: []
 access:
 - schemaKey: AccessRequirements
   status: dandi:EmbargoedAccess
@@ -10,8 +11,9 @@ assetsSummary:
   numberOfBytes: 0
   numberOfFiles: 0
   schemaKey: AssetsSummary
-citation: Inferior colliculus linear probe recording (2025). (Version draft) [Data
-  set]. DANDI Archive. https://dandiarchive.org/dandiset/001420/draft
+citation: 'Cortical Circuits for the integration of short-latency auditory pathways:
+  Inferior colliculus linear probe recording (2025). (Version draft) [Data set]. DANDI
+  Archive. https://dandiarchive.org/dandiset/001420/draft'
 contributor:
 - awardNumber: 1 RF1 NS 128873-01
   name: National Institutes of Health (NIH)
@@ -21,13 +23,19 @@ contributor:
 dateCreated: '2025-04-21T16:46:52.519729+00:00'
 description: Linear probe recordings from the mouse inferior colliculus during click
   presentations. Unit activity data are included.
+ethicsApproval: []
 id: DANDI:001420/draft
 identifier: DANDI:001420
+license:
+- spdx:CC-BY-4.0
 manifestLocation:
 - https://api.dandiarchive.org/api/dandisets/001420/versions/draft/assets/
-name: Inferior colliculus linear probe recording
+name: 'Cortical Circuits for the integration of short-latency auditory pathways: Inferior
+  colliculus linear probe recording'
+relatedResource: []
 repository: https://dandiarchive.org
 schemaKey: Dandiset
 schemaVersion: 0.6.9
 url: https://dandiarchive.org/dandiset/001420/draft
 version: draft
+wasGeneratedBy: []
